users and account table created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ management.endpoints.web.expose.include = *
 #Database Credentials------------------------------
 
 #These are the same credentials we're used to from JDBC
-spring.datasource.url = jdbc:postgresql://projects203.cc09gjdf5v2j.us-east-1.rds.amazonaws.com/postgres
+spring.datasource.url = jdbc:postgresql://localhost:8000/postgres
 spring.datasource.username = postgres
 spring.datasource.password = password
 
@@ -27,4 +27,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #specify what schema we're pointing to
-spring.jpa.properties.hibernate.default_schema=project1
+spring.jpa.properties.hibernate.default_schema=p1
