Creating Login Features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ management.endpoints.web.expose.include = *
 #Database Credentials------------------------------
 
 #These are the same credentials we're used to from JDBC
-spring.datasource.url = jdbc:postgresql://localhost:8000/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = password
 
@@ -28,3 +28,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #specify what schema we're pointing to
 spring.jpa.properties.hibernate.default_schema=p1
+
+#JWT------------------------------------------------------
+app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
+spring.main.allow-circular-references=true
