fix compile errors | Connected DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Configuring the port this application will run on, and the base URL
-server.port = 5000
+server.port = 5432
 server.servlet.context-path = /p1
 
 #Spring Boot Actuator Settings------------------
@@ -13,7 +13,7 @@ management.endpoints.web.expose.include = *
 #Database Credentials------------------------------
 
 #These are the same credentials we're used to from JDBC
-spring.datasource.url = jdbc:postgresql://localhost:8000/postgres
+spring.datasource.url = jdbc:postgresql://postgres.ckoukbxwfine.us-west-2.rds.amazonaws.com/postgres
 spring.datasource.username = postgres
 spring.datasource.password = password
 
